--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -3,7 +3,7 @@
 <li>
     <article class="post">
         <a href="{% url "post-detail-page" post.slug %}">
-            <img src="{% static "blog/images/"|add:post.image %}" alt="{{  post.title }}"/>
+            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{  post.title }}"/>
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
                 <p>There's nothing like the views you get when hiking in the mountains!  And I wasn't even prepared for what happened while I was enjoying the view!</p>
