Added images to upload folder

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,7 +13,7 @@
 
     <section id="welcome">
         <header>
-            <img src="{% static "blog/images/3S_Aiden.jpg" %}" alt="George - The Author of this Blog" />
+            <img src="{% static "blog/images/aiden_2m_art.jpg" %}" alt="George - The Author of this Blog" />
             <h2>George's Blog</h2>
         </header>
         <p>Hi, I am George S. and this is my blog about tech and the world!</p>
